@@ -26,7 +26,9 @@
  <li> New <tt>-d <em>notif</em></tt> option to <a href="s6-log.html">s6-log</a>. </li>
  <li> New default for the <tt>-l <em>linelimit</em></tt> option to <a href="s6-log.html">s6-log</a>:
 8192 bytes. </li>
- <li> New <tt>-I</tt> option to <a href="s6-ipcserver-access.html">s6-ipcserver-access</a>. </li>
+ <li> In the <a href="libs6/accessrules.html">accessrules</a> library, checking against uid/gid
+now checks the <tt>uid/self</tt> key if the client and the server have the same uid, and
+the <tt>gid/self</tt> key if the client and the server have the same gid. </li>
 </ul>
 
 <h2> in 2.7.2.2 </h2>
